--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  background-color: black;
   padding: 6rem;
-  min-height: 100vh;
 }
 
 .description {
