--- a/src/app/components/header.module.css
+++ b/src/app/components/header.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+
 
 .header{
     background-color: #040521;
@@ -13,33 +13,34 @@
     height: 115px;
 }
 
-.header__navbar{
+.headerNavbar{
     display: flex;
     justify-content: space-between;
     width: 30%;
     
 }
 
-.header__navbar a{
+.headerNavbar a{
     text-decoration: none;
     color: inherit;
 }
 
-.header__iconsSection{
+.headerIconsSection{
     display: flex;
     justify-content: space-between;
     width: 10%;
 }
 
-.header__logo{
+.headerLogo{
     margin-top: 45px;
     z-index: 1;
 }
 
-.header__searchbar{
+.headerSearchbar{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: center; 
 }
+
 
 
