--- a/src/app/components/slider.module.css
+++ b/src/app/components/slider.module.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@800&display=swap');
-
 .slider{
     margin: 0;
     width: 100%;
@@ -7,7 +5,7 @@
 
 .sliderItem{
     width: 100%;
-    height: 700px;
+    height: 542px;
 }
 
 .sliderCaptionContainer{
@@ -26,8 +24,9 @@
 }
 
 .sliderImage{
+height: 120%;
 width: 100%;
-object-fit: scale-down;
+object-fit: cover;
 
 }
 
