update form contact font family and color

--- a/src/app/components/button.module.css
+++ b/src/app/components/button.module.css
@@ -1,8 +1,8 @@
 .button{
-    background-color: #FFC67E;
+    background-color: var(--secundary-color);
     width: 255px;
     height: 74px;
-    color: black;
+    color: var(--background-color);
     border-radius: 50px;
     border: none;
     font-family: 'Lato', sans-serif;
