--- a/src/app/components/form.module.css
+++ b/src/app/components/form.module.css
@@ -1,11 +1,14 @@
 .contactForm{
-    background-color: #040521;
+    background-color: var(--background-color);
     border-radius: 0;
-    border: 2px solid white;
-    
+    border: 2px solid var(--tertiary-color);
 }
 
-.contactForm ::placeholder{
-    color:aqua
+.contactForm::placeholder {
+    color: var(--tertiary-color);
+    font-family: 'Lato', sans-serif;
+    font-weight:700;
+    font-size: 20px;
+  }
 
-}
+
