--- a/src/app/components/header.module.css
+++ b/src/app/components/header.module.css
@@ -1,15 +1,42 @@
+.header{
+    background-color: var(--background-color);
+    color: var(--tertiary-color);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    display: flex;
+    height: 115px;
+}
 
+.headerNavbar{
+    display: none;
+}
+
+.headerIconsSection{
+    display: none;
+}
+
+.headerLogo{
+    height: 96px;
+    width: 95px;
+    z-index: 1;
+}
+
+.headerSearchbar{
+    display: none; 
+}
+@media (min-width: 1000px)  {
 
 .header{
-    background-color: #040521;
-    color: #FFFFFF;
+    background-color: var(--background-color);
+    color: var(--tertiary-color);
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     font-size: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 60px;
+    padding: 20px 100px;
     height: 115px;
 }
 
@@ -32,15 +59,15 @@
 }
 
 .headerLogo{
-    margin-top: 45px;
+    margin: 45px 0 0 150px;
     z-index: 1;
 }
 
 .headerSearchbar{
     display: flex;
     flex-direction: row;
-    align-items: center; 
+    align-items: center;
+    gap: 10px;
 }
 
-
-
+}
