--- a/src/app/components/searchbar.module.css
+++ b/src/app/components/searchbar.module.css
@@ -1,3 +1,10 @@
 .searchBarBorder {
     border: none;
 }
+
+.searchBarBorder::placeholder {
+    color: var(--tertiary-color);
+    font-family: 'Montserrat', sans-serif;
+    font-weight:700;
+    font-size: 18px;
+  }
