--- a/src/app/conoce-a/page.module.css
+++ b/src/app/conoce-a/page.module.css
@@ -1,7 +1,5 @@
-
-
 .main{
-    background-color: #040521;
+    background-color: var(--background-color);
     display: flex;
     align-items: center;
 }
@@ -14,6 +12,7 @@
     flex-direction: row;
     align-items: start;
 }
+
 .knowDetails{
     display: flex;
     flex-direction: column;
@@ -21,11 +20,11 @@
     align-items: center;
     width: 50%;
     height: 530px;
-    border: 2px solid red;
+    gap: 20px;
 }
 
 .knowTitle{
-    color: white;
+    color: var(--tertiary-color);
     font-size: 50px;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
@@ -34,7 +33,7 @@
 }
 
 .knowText{
-    color: white;
+    color: var(--tertiary-color);
     text-align: center;
     font-size: 24px;
     font-family: 'Montserrat', sans-serif;
