--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Montserrat:ital,wght@0,400;0,600;1,400&display=swap');
+
 :root {
-  --max-width: 1100px;
+  --background-color: #040521;
+  --secundary-color: #c1894a;
+  --tertiary-color: #FFFFFF; 
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
