--- a/src/app/components/header.module.css
+++ b/src/app/components/header.module.css
@@ -3,41 +3,28 @@
     color: var(--tertiary-color);
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 1.25rem;
     display: flex;
-    height: 115px;
+    justify-content: space-between;
+    align-items: center;
+    height: 7.2rem;
+    padding: 0.3rem 1rem;
 }
 
-.headerNavbar{
-    display: none;
-}
-
-.headerIconsSection{
+.headerNavbar, .headerIconsSection, .headerSearchbar{
     display: none;
 }
 
 .headerLogo{
-    height: 96px;
-    width: 95px;
+    height: 6rem;
+    width: 5.9rem;
     z-index: 1;
 }
 
-.headerSearchbar{
-    display: none; 
-}
 @media (min-width: 1000px)  {
 
 .header{
-    background-color: var(--background-color);
-    color: var(--tertiary-color);
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 100px;
-    height: 115px;
+    padding: 1.25rem 6.25rem;
 }
 
 .headerNavbar{
@@ -56,18 +43,25 @@
     display: flex;
     justify-content: space-between;
     width: 10%;
+    gap: 1.25rem;
 }
 
 .headerLogo{
-    margin: 45px 0 0 150px;
+    margin: 2.8rem 0 0 7.5rem;
     z-index: 1;
+    width: 8.75rem;
+    height: 8.75rem;
 }
 
 .headerSearchbar{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 10px;
+    gap: 6.2rem;
+}
+
+.menuhamburguesa{
+    display: none;
 }
 
 }
