--- a/src/app/components/header.module.css
+++ b/src/app/components/header.module.css
@@ -1,14 +1,11 @@
 .header{
     background-color: var(--background-color);
-    color: var(--tertiary-color);
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-size: 1.25rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     height: 7.2rem;
     padding: 0.3rem 1rem;
+}
+
+.burgerMenu{
+    width: 100%;
 }
 
 .headerNavbar, .headerIconsSection, .headerSearchbar{
@@ -16,16 +13,20 @@
 }
 
 .headerLogo{
-    /* height: 6rem;
-    width: 5.9rem; */
     display: none;
-    
 }
 
 @media (min-width: 1000px)  {
 
 .header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 1.25rem 6.25rem;
+    color: var(--tertiary-color);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 1.25rem;
 }
 
 .headerNavbar{
@@ -48,20 +49,24 @@
 }
 
 .headerLogo{
-    margin: 2.8rem 0 0 7.5rem;
-    z-index: 1;
-    width: 8.75rem;
-    height: 8.75rem;
+    display: flex;
+    margin: 2.8rem 0 0 6.5rem;
+    z-index: 3;
+}
+
+.headerLogo Image{
+    width: 8.7rem;
+    height: 8.7rem;
 }
 
 .headerSearchbar{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 6.2rem;
+    gap: 1rem;
 }
 
-.menuhamburguesa{
+.burgerMenu{
     display: none;
 }
 
