--- a/src/app/components/searchbar.module.css
+++ b/src/app/components/searchbar.module.css
@@ -6,5 +6,21 @@
     color: var(--tertiary-color);
     font-family: 'Montserrat', sans-serif;
     font-weight:700;
-    font-size: 18px;
+    font-size: 1.125rem;
   }
+
+.searchIcon {
+    color: var(--tertiary-color);
+    font-family: 'Montserrat', sans-serif;
+    font-weight:700;
+    font-size: 1.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    
+}
+
+.searchIcon p{
+    margin-top: 0.8rem;
+}
