--- a/src/app/conoce-a/page.module.css
+++ b/src/app/conoce-a/page.module.css
@@ -1,7 +1,7 @@
 .main{
-    background-color: var(--background-color);
     display: flex;
     align-items: center;
+    padding-top: 0.15rem;
 }
 
 .mainContent{
@@ -45,7 +45,7 @@
     object-fit: cover;
     height: 520px;
     width: 400px;
-    padding-bottom: 20px;
+    padding-bottom: 25px;
 }
 
 .knowBackground{
@@ -58,10 +58,7 @@
     display: flex;
     align-items: end;
     justify-content: start;
-    width: 45%;
+    width: 46%;
 }
 
-.backgroundTwo{
-
-}  
 
