--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,18 @@
   margin: 0;
   padding: 0;
 }
+
+body{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  
+  
+}
+
+main{
+  display: flex;
+  background-color: var(--background-color);
+  height: 100%;
+
+}
