finish doctors page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background-color: #040521;
-  --secundary-color: #c1894a;
+  --secundary-color: #FFC67E;
   --tertiary-color: #FFFFFF; 
 }
 
