--- a/src/app/components/card/card.module.css
+++ b/src/app/components/card/card.module.css
@@ -4,3 +4,44 @@ background-color: var(--background-color);
 color: var(--tertiary-color);    
 }
 
+.imageContainer{
+   height: 430px;
+   object-fit: cover;
+}
+
+
+.cardImage{
+    height: 100%;
+    border-radius: 0;
+}
+
+.cardTitle{
+    font-family: 'Lato' sans-serif;
+    font-weight:700;
+    font-size: 28px;
+}
+
+.cardActor{
+    font-family: 'Montserrat' sans-serif;
+    font-style: italic;
+    font-size: 20px;
+}
+
+.cardYears{
+    font-family: 'Montserrat' sans-serif;
+    font-size: 20px;
+}
+
+.cardButton{
+    background-color: var(--secundary-color); 
+    border: none;
+    border-radius: 50px;
+    width: 210px;
+    height: 50px;
+    color: var(--background-color);
+    font-family: 'Lato' sans-serif;
+    font-weight:700;
+    font-size: 22px;
+}
+
+
