--- a/src/app/doctors/page.module.css
+++ b/src/app/doctors/page.module.css
@@ -4,10 +4,18 @@
     padding: 50px 60px;
 }
 
+.doctorsTitle{
+    color: var(--tertiary-color);
+    font-size: 50px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    margin: 30px 0 30px 4%;
+}
+
 .doctorCards{
     display: flex;
     justify-content: center;
-    border: solid red;    
+    margin-left: 4%;    
 }
 
 .doctorCard{
@@ -15,4 +23,3 @@
     flex-wrap: wrap;
     gap: 50px;
 }
-
