--- a/src/app/components/form/form.module.css
+++ b/src/app/components/form/form.module.css
@@ -11,4 +11,16 @@
     font-size: 20px;
   }
 
+  .contactButton{
+    background-color: var(--secundary-color);
+    width: 15.65rem;
+    height: 3.5rem;
+    color: var(--background-color);
+    border-radius: 3rem;
+    border: none;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 1.75rem;
+    margin-top: 1.56rem;
+  }
 
