--- a/src/app/conoce-a/page.module.css
+++ b/src/app/conoce-a/page.module.css
@@ -1,16 +1,101 @@
 .main{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding-top: 0.15rem;
+    background-color: var(--background-color);
 }
 
 .mainContent{
-    z-index: 1;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    top: 150px;
+
+}
+
+.knowTitle{
+    color: var(--tertiary-color);
+    font-size: 38px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    width: 85%;
+    margin: auto;
+    text-align: center;
+}
+
+.knowImageMobile{
+    width: 240px;
+    height: 290px;
+    object-fit: cover;
+    margin: auto;
+}
+
+.knowDetails{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin: 20px 0 40px 0;
+}
+
+.knowText{
+    color: var(--tertiary-color);
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    width: 80%;
+    margin: auto;
+}
+
+.knowBackground{
     position:absolute;
+    width: 100%;
+   z-index: 0;
+   left: -80px;
+   display: flex;
+   justify-content: space-between;
+}
+
+.backgroundTwo{
+    object-fit:cover;
+    width: 100%;
+    height: 380px;
+    margin-left: 60px;
+    top: -180px;
+    left: -85px;
+    position: relative;
+}
+
+.backgroundOne{
+    top: -40px;
+    position: relative;
+    width: 200px;
+}
+
+
+.knowImageDesktop{
+    display:none;
+}
+
+@media (min-width: 1000px)  {
+    .main{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+ 
+}
+
+.mainContent{
+    z-index: 3;
     display: flex;
     justify-content:space-evenly;
     flex-direction: row;
-    align-items: start;
+    align-items: start;    
 }
 
 .knowDetails{
@@ -19,9 +104,9 @@
     justify-content: center;
     align-items: center;
     width: 50%;
-    height: 530px;
-    gap: 20px;
+    height: 482px;
 }
+
 
 .knowTitle{
     color: var(--tertiary-color);
@@ -41,24 +126,36 @@
     width: 80%;
 }
 
-.knowImage{
+.knowImageMobile{
+    display:none;
+}
+
+.knowImageDesktop{
+    display: flex;
     object-fit: cover;
-    height: 520px;
-    width: 400px;
-    padding-bottom: 25px;
+    height: 510px;
+    width: 390px;
 }
 
 .knowBackground{
     width: 100%;
    z-index: 0;
    display: flex;
-  
 }
 .backgroundOne{
     display: flex;
     align-items: end;
     justify-content: start;
     width: 46%;
+    top: 90px;
+    left: 60px;
+}
+
+.backgroundTwo{
+    width: 36%;
+    top: -20px;
+    left: -110px;
+}
 }
 
 
