--- a/src/app/components/buttons/button.module.css
+++ b/src/app/components/buttons/button.module.css
@@ -1,11 +1,52 @@
-.button{
+.buttonDoctors {
     background-color: var(--secundary-color);
-    width: 255px;
-    height: 74px;
+    border: none;
+    border-radius: 50px;
+    width: 210px;
+    height: 50px;
+    color: var(--background-color);
+    font-family: 'Lato' sans-serif;
+    font-weight: 700;
+    font-size: 22px;
+}
+
+.buttonKnowPage{
+    background-color: var(--secundary-color);
+    border: none;
+    border-radius: 50px;
+    width: 210px;
+    height: 50px;
+    color: var(--background-color);
+    font-family: 'Lato' sans-serif;
+    font-weight: 700;
+    font-size: 22px;
+}
+
+.button {
+    background-color: var(--secundary-color);
+    width: 210px;
+    height: 50px;
     color: var(--background-color);
     border-radius: 50px;
     border: none;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    font-size: 32px;
+    font-size: 22px;
+    margin-left: -15px;
+}
+
+@media (min-width: 1000px){
+
+    .button {
+        width: 255px;
+        height: 74px;
+        font-size: 32px;
+    }
+
+
+    .buttonKnowPage{
+        width: 255px;
+        height: 74px;
+        font-size: 32px;
+    }
 }
