--- a/src/app/components/card/card.module.css
+++ b/src/app/components/card/card.module.css
@@ -1,47 +1,69 @@
-.cardDoctors{
+.cardDoctors {
     width: 317px;
-background-color: var(--background-color);
-color: var(--tertiary-color);    
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--background-color);
+    color: var(--tertiary-color);
+    margin: 60px 0px;
 }
 
-.imageContainer{
-   height: 430px;
-   object-fit: cover;
+.imageContainer {
+    height: 330px;
+    width: 230px;
+    overflow: hidden;
 }
 
 
-.cardImage{
+.cardImage {
+    width: 100%;
     height: 100%;
+    object-fit: cover;
     border-radius: 0;
 }
 
-.cardTitle{
-    font-family: 'Lato' sans-serif;
-    font-weight:700;
-    font-size: 28px;
+.cardDetails {
+    margin-left: -20px;
 }
 
-.cardActor{
+.cardTitle {
+    font-family: 'Lato' sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    width: 230px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.cardActor {
     font-family: 'Montserrat' sans-serif;
     font-style: italic;
     font-size: 20px;
+    height: 50px;
+    display: flex;
+    align-items: center;
 }
 
-.cardYears{
+.cardYears {
     font-family: 'Montserrat' sans-serif;
     font-size: 20px;
 }
 
-.cardButton{
-    background-color: var(--secundary-color); 
-    border: none;
-    border-radius: 50px;
-    width: 210px;
-    height: 50px;
-    color: var(--background-color);
-    font-family: 'Lato' sans-serif;
-    font-weight:700;
-    font-size: 22px;
+@media (min-width: 1000px) {
+
+    .cardDoctors {
+        margin: 20px 0px;
+    }
+
+    .cardTitle {
+        font-weight: 700;
+        font-size: 28px;
+        height: 70px;
+    }
+
+    .cardActor {
+        height: 70px;
+    }
 }
-
-
