--- a/src/app/components/searchbar/searchbar.module.css
+++ b/src/app/components/searchbar/searchbar.module.css
@@ -1,26 +1,48 @@
-.searchBarBorder {
-    border: none;
+.searchContainer{
+    display: none;
 }
 
-.searchBarBorder::placeholder {
+.searchContainerMobile{
+    display: flex;
+    flex-direction: row;
+    width: 120px;
+}
+
+.searchBar{
+    background-color: var(--background-color);
+    border-radius: 0;
+    border: none;
+    margin-top: 15px;
+}
+
+.searchBar::placeholder {
     color: var(--tertiary-color);
     font-family: 'Montserrat', sans-serif;
     font-weight:700;
     font-size: 1.125rem;
-  }
+}
 
-.searchIcon {
-    color: var(--tertiary-color);
-    font-family: 'Montserrat', sans-serif;
-    font-weight:700;
-    font-size: 1.25rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
+@media (min-width: 1000px){
+    .searchContainer{
+        display: flex;
+        flex-direction: row;
+    }
     
+    .searchBar{
+        background-color: var(--background-color);
+        border-radius: 0;
+        border: none;
+        margin-top: 15px;
+    }
+    
+    .searchBar::placeholder {
+        color: var(--tertiary-color);
+        font-family: 'Montserrat', sans-serif;
+        font-weight:700;
+        font-size: 1.125rem;
+    }
 }
+    
 
-.searchIcon p{
-    margin-top: 0.8rem;
-}
+
+
