--- a/src/app/conoce-a/page.module.css
+++ b/src/app/conoce-a/page.module.css
@@ -1,4 +1,4 @@
-.main{
+.main {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,7 +6,7 @@
     background-color: var(--background-color);
 }
 
-.mainContent{
+.mainContent {
     z-index: 3;
     display: flex;
     justify-content: center;
@@ -16,7 +16,7 @@
 
 }
 
-.knowTitle{
+.knowTitle {
     color: var(--tertiary-color);
     font-size: 38px;
     font-family: 'Lato', sans-serif;
@@ -26,14 +26,14 @@
     text-align: center;
 }
 
-.knowImageMobile{
+.knowImageMobile {
     width: 240px;
     height: 290px;
     object-fit: cover;
     margin: auto;
 }
 
-.knowDetails{
+.knowDetails {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,7 +42,7 @@
     margin: 20px 0 40px 0;
 }
 
-.knowText{
+.knowText {
     color: var(--tertiary-color);
     text-align: center;
     font-size: 20px;
@@ -52,110 +52,111 @@
     margin: auto;
 }
 
-.knowBackground{
-    position:absolute;
+.knowBackground {
+    position: absolute;
     width: 100%;
-   z-index: 0;
-   left: -80px;
-   display: flex;
-   justify-content: space-between;
+    height: 700px;
+    top: 130px;
+    z-index: 0;
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
 }
 
-.backgroundTwo{
-    object-fit:cover;
+.backgroundTwo {
+    object-fit: cover;
     width: 100%;
     height: 380px;
-    margin-left: 60px;
-    top: -180px;
+    top: 85px;
     left: -85px;
     position: relative;
 }
 
-.backgroundOne{
-    top: -40px;
+.backgroundOne {
+    top: 220px;
     position: relative;
-    width: 200px;
+    left: -60px;
+    width: 160px;
 }
 
 
-.knowImageDesktop{
-    display:none;
+.knowImageDesktop {
+    display: none;
 }
 
-@media (min-width: 1000px)  {
-    .main{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
- 
-}
+@media (min-width: 1000px) {
+    .main {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 
-.mainContent{
-    z-index: 3;
-    display: flex;
-    justify-content:space-evenly;
-    flex-direction: row;
-    align-items: start;    
-}
+    .mainContent {
+        z-index: 3;
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+        align-items: start;
+    }
 
-.knowDetails{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 482px;
-}
-
-
-.knowTitle{
-    color: var(--tertiary-color);
-    font-size: 50px;
-    font-family: 'Lato', sans-serif;
-    font-weight: 700;
-    width: 85%;
-    text-align: center;
-}
-
-.knowText{
-    color: var(--tertiary-color);
-    text-align: center;
-    font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    width: 80%;
-}
-
-.knowImageMobile{
-    display:none;
-}
-
-.knowImageDesktop{
-    display: flex;
-    object-fit: cover;
-    height: 510px;
-    width: 390px;
-}
-
-.knowBackground{
-    width: 100%;
-   z-index: 0;
-   display: flex;
-}
-.backgroundOne{
-    display: flex;
-    align-items: end;
-    justify-content: start;
-    width: 46%;
-    top: 90px;
-    left: 60px;
-}
-
-.backgroundTwo{
-    width: 36%;
-    top: -20px;
-    left: -110px;
-}
-}
+    .knowDetails {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        height: 482px;
+    }
 
 
+    .knowTitle {
+        color: var(--tertiary-color);
+        font-size: 50px;
+        font-family: 'Lato', sans-serif;
+        font-weight: 700;
+        width: 85%;
+        text-align: center;
+    }
+
+    .knowText {
+        color: var(--tertiary-color);
+        text-align: center;
+        font-size: 24px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        width: 80%;
+        margin-top: -20px;
+    }
+
+    .knowImageMobile {
+        display: none;
+    }
+
+    .knowImageDesktop {
+        display: flex;
+        object-fit: cover;
+        height: 510px;
+        width: 390px;
+    }
+
+    .knowBackground {
+        width: 100%;
+        z-index: 0;
+        display: flex;
+        height: 500px;
+    }
+
+    .backgroundOne {
+        display: flex;
+        justify-content: start;
+        width: 46%;
+        left: 20px;
+        height: 300px;
+    }
+
+    .backgroundTwo {
+        width: 36%;
+        top: 40px;
+        left: -200px;
+    }
+}
