--- a/src/app/components/card/card.module.css
+++ b/src/app/components/card/card.module.css
@@ -1,17 +1,17 @@
 .cardDoctors {
-    width: 317px;
-    height: 600px;
+    width: 19.8rem;
+    height: 37.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: var(--background-color);
     color: var(--tertiary-color);
-    margin: 60px 0px;
+    margin: 3.75rem 0;
 }
 
 .imageContainer {
-    height: 330px;
-    width: 230px;
+    height: 20.6rem;
+    width: 14.38rem;
     overflow: hidden;
 }
 
@@ -24,15 +24,15 @@
 }
 
 .cardDetails {
-    margin-left: -20px;
+    margin-left: -1.25rem;
 }
 
 .cardTitle {
     font-family: 'Lato' sans-serif;
     font-weight: 600;
-    font-size: 24px;
-    width: 230px;
-    height: 50px;
+    font-size: 1.5rem;
+    width: 14.38rem;
+    height: 3.125rem;
     display: flex;
     align-items: center;
 }
@@ -40,30 +40,30 @@
 .cardActor {
     font-family: 'Montserrat' sans-serif;
     font-style: italic;
-    font-size: 20px;
-    height: 50px;
+    font-size: 1.25rem;
+    height: 3.125rem;
     display: flex;
     align-items: center;
 }
 
 .cardYears {
     font-family: 'Montserrat' sans-serif;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 @media (min-width: 1000px) {
 
     .cardDoctors {
-        margin: 20px 0px;
+        margin: 1.25rem 0;
     }
 
     .cardTitle {
         font-weight: 700;
-        font-size: 28px;
-        height: 70px;
+        font-size: 1.75rem;
+        height: 4.38rem;
     }
 
     .cardActor {
-        height: 70px;
+        height: 4.38rem;
     }
 }
