--- a/src/app/components/footer/footer.module.css
+++ b/src/app/components/footer/footer.module.css
@@ -1,39 +1,39 @@
-.footer{
-    border-top: 2px solid var(--tertiary-color);
+.footer {
+    border-top: 0.125rem solid var(--tertiary-color);
     background-color: var(--background-color);
     color: var(--tertiary-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 30px 25px;
-    height: 60px;
+    padding: 1.88rem 1.56rem;
+    height: 3.75rem;
     margin-top: auto;
 
 }
 
-.footerIconsSection{
+.footerIconsSection {
     display: flex;
     justify-content: end;
     width: 100%;
-    gap:15px;
+    gap: 0.94rem;
 }
 
-@media (min-width: 1000px)  {
+@media (min-width: 1000px) {
 
-.footer{
-    padding: 35px 100px;
-}
+    .footer {
+        padding: 2.2rem 6.25rem;
+    }
 
-.footerIconsSection{
-    display: flex;
-    justify-content: space-between;
-    width: 10%;
-    gap:20px;
-}
+    .footerIconsSection {
+        display: flex;
+        justify-content: space-between;
+        width: 10%;
+        gap: 1.25rem;
+    }
 
-.footerImage{
-    width: 40px;
-    height: 40px;
-}
+    .footerImage {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
 
 }
