--- a/src/app/components/form/form.module.css
+++ b/src/app/components/form/form.module.css
@@ -1,26 +1,25 @@
-.contactForm{
-    background-color: var(--background-color);
-    border-radius: 0;
-    border: 2px solid var(--tertiary-color);
+.contactForm {
+  background-color: var(--background-color);
+  border-radius: 0;
+  border: 0.125rem solid var(--tertiary-color);
 }
 
 .contactForm::placeholder {
-    color: var(--tertiary-color);
-    font-family: 'Lato', sans-serif;
-    font-weight:700;
-    font-size: 20px;
-  }
+  color: var(--tertiary-color);
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  font-size: 1.25rem;
+}
 
-  .contactButton{
-    background-color: var(--secundary-color);
-    width: 15.65rem;
-    height: 3.5rem;
-    color: var(--background-color);
-    border-radius: 3rem;
-    border: none;
-    font-family: 'Lato', sans-serif;
-    font-weight: 700;
-    font-size: 1.75rem;
-    margin-top: 1.56rem;
-  }
-
+.contactButton {
+  background-color: var(--secundary-color);
+  width: 15.65rem;
+  height: 3.5rem;
+  color: var(--background-color);
+  border-radius: 3rem;
+  border: none;
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+  font-size: 1.75rem;
+  margin-top: 1.56rem;
+}
