--- a/src/app/components/header/header.module.css
+++ b/src/app/components/header/header.module.css
@@ -1,73 +1,75 @@
-.header{
+.header {
     background-color: var(--background-color);
     height: 7.2rem;
     padding: 0.3rem 1rem;
 }
 
-.burgerMenu{
+.burgerMenu {
     width: 100%;
 }
 
-.headerNavbar, .headerIconsSection, .headerSearchbar{
+.headerNavbar,
+.headerIconsSection,
+.headerSearchbar {
     display: none;
 }
 
-.headerLogo{
+.headerLogo {
     display: none;
 }
 
-@media (min-width: 1000px)  {
+@media (min-width: 1000px) {
 
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.25rem 6.25rem;
-    color: var(--tertiary-color);
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-size: 1.25rem;
-}
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1.25rem 6.25rem;
+        color: var(--tertiary-color);
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 600;
+        font-size: 1.25rem;
+    }
 
-.headerNavbar{
-    display: flex;
-    justify-content: space-between;
-    width: 30%;
-    
-}
+    .headerNavbar {
+        display: flex;
+        justify-content: space-between;
+        width: 30%;
 
-.headerNavbar a{
-    text-decoration: none;
-    color: inherit;
-}
+    }
 
-.headerIconsSection{
-    display: flex;
-    justify-content: space-between;
-    width: 10%;
-    gap: 1.25rem;
-}
+    .headerNavbar a {
+        text-decoration: none;
+        color: inherit;
+    }
 
-.headerLogo{
-    display: flex;
-    margin: 2.8rem 0 0 6.5rem;
-    z-index: 3;
-}
+    .headerIconsSection {
+        display: flex;
+        justify-content: space-between;
+        width: 10%;
+        gap: 1.25rem;
+    }
 
-.headerLogo Image{
-    width: 8.7rem;
-    height: 8.7rem;
-}
+    .headerLogo {
+        display: flex;
+        margin: 2.8rem 0 0 6.5rem;
+        z-index: 3;
+    }
 
-.headerSearchbar{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-}
+    .headerLogo Image {
+        width: 8.7rem;
+        height: 8.7rem;
+    }
 
-.burgerMenu{
-    display: none;
-}
+    .headerSearchbar {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .burgerMenu {
+        display: none;
+    }
 
 }
