--- a/src/app/components/searchbar/searchbar.module.css
+++ b/src/app/components/searchbar/searchbar.module.css
@@ -1,48 +1,31 @@
-.searchContainer{
+.searchContainer {
     display: none;
 }
 
-.searchContainerMobile{
+.searchContainerMobile {
     display: flex;
     flex-direction: row;
-    width: 120px;
+    width: 7.5rem;
 }
 
-.searchBar{
+.searchBar {
     background-color: var(--background-color);
     border-radius: 0;
     border: none;
-    margin-top: 15px;
+    margin-top: 0.93rem;
 }
 
 .searchBar::placeholder {
     color: var(--tertiary-color);
     font-family: 'Montserrat', sans-serif;
-    font-weight:700;
+    font-weight: 700;
     font-size: 1.125rem;
 }
 
-@media (min-width: 1000px){
-    .searchContainer{
+@media (min-width: 1000px) {
+    .searchContainer {
         display: flex;
         flex-direction: row;
     }
-    
-    .searchBar{
-        background-color: var(--background-color);
-        border-radius: 0;
-        border: none;
-        margin-top: 15px;
-    }
-    
-    .searchBar::placeholder {
-        color: var(--tertiary-color);
-        font-family: 'Montserrat', sans-serif;
-        font-weight:700;
-        font-size: 1.125rem;
-    }
+
 }
-    
-
-
-
