--- a/src/app/components/slider/slider.module.css
+++ b/src/app/components/slider/slider.module.css
@@ -1,57 +1,57 @@
-.slider{
+.slider {
     margin: 0;
     width: 100%;
 }
 
-.sliderItem{
+.sliderItem {
     width: 100%;
-    height: 490px;
+    height: 30.63rem;
 }
 
-.sliderCaptionContainer{
+.sliderCaptionContainer {
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items:start;
+    align-items: start;
     justify-content: center;
     gap: 1rem;
 }
 
-.sliderTitle{
-    padding-top: 75px;
-    margin-left: -20px;
-    font-size: 40px;
+.sliderTitle {
+    padding-top: 4.69rem;
+    margin-left: -1.25rem;
+    font-size: 2.5rem;
     font-family: 'Lato', sans-serif;
     font-weight: 800;
 }
 
-.sliderImage{
-height: 100%;
-width: 100%;
-object-fit: cover;
+.sliderImage {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 
 }
 
-.sliderCaption{
+.sliderCaption {
     height: 100%;
 }
 
 
-@media (min-width: 1000px)  {
+@media (min-width: 1000px) {
 
-    .sliderItem{
-        height: 542px;
+    .sliderItem {
+        height: 33.875rem;
     }
 
-    .sliderCaptionContainer{
+    .sliderCaptionContainer {
         gap: 3rem;
     }
 
-    .sliderTitle{
-        font-size: 64px;
+    .sliderTitle {
+        font-size: 4rem;
     }
 
-    .sliderImage{
+    .sliderImage {
         height: 120%;
-        }
+    }
 }
