--- a/src/app/conoce-a/page.module.css
+++ b/src/app/conoce-a/page.module.css
@@ -12,13 +12,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    top: 150px;
+    top: 9.38rem;
 
 }
 
 .knowTitle {
     color: var(--tertiary-color);
-    font-size: 38px;
+    font-size: 2.38rem;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     width: 85%;
@@ -27,8 +27,8 @@
 }
 
 .knowImageMobile {
-    width: 240px;
-    height: 290px;
+    width: 15rem;
+    height: 18.13rem;
     object-fit: cover;
     margin: auto;
 }
@@ -38,14 +38,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 40px;
-    margin: 20px 0 40px 0;
+    gap: 2.5rem;
+    margin: 1.25rem 0 2.5rem 0;
 }
 
 .knowText {
     color: var(--tertiary-color);
     text-align: center;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     width: 80%;
@@ -55,8 +55,8 @@
 .knowBackground {
     position: absolute;
     width: 100%;
-    height: 700px;
-    top: 130px;
+    height: 43.75rem;
+    top: 8.125rem;
     z-index: 0;
     display: flex;
     justify-content: space-between;
@@ -66,19 +66,18 @@
 .backgroundTwo {
     object-fit: cover;
     width: 100%;
-    height: 380px;
-    top: 85px;
-    left: -85px;
+    height: 23.75rem;
+    top: 5.3rem;
+    left: -5.3rem;
     position: relative;
 }
 
 .backgroundOne {
-    top: 220px;
+    top: 13.75rem;
     position: relative;
-    left: -60px;
-    width: 160px;
+    left: -3.75rem;
+    width: 10rem;
 }
-
 
 .knowImageDesktop {
     display: none;
@@ -105,13 +104,13 @@
         justify-content: center;
         align-items: center;
         width: 50%;
-        height: 482px;
+        height: 30.13rem;
     }
 
 
     .knowTitle {
         color: var(--tertiary-color);
-        font-size: 50px;
+        font-size: 3.125rem;
         font-family: 'Lato', sans-serif;
         font-weight: 700;
         width: 85%;
@@ -121,11 +120,11 @@
     .knowText {
         color: var(--tertiary-color);
         text-align: center;
-        font-size: 24px;
+        font-size: 1.5rem;
         font-family: 'Montserrat', sans-serif;
         font-weight: 400;
         width: 80%;
-        margin-top: -20px;
+        margin-top: -1.25rem;
     }
 
     .knowImageMobile {
@@ -135,28 +134,28 @@
     .knowImageDesktop {
         display: flex;
         object-fit: cover;
-        height: 510px;
-        width: 390px;
+        height: 31.88rem;
+        width: 24.38rem;
     }
 
     .knowBackground {
         width: 100%;
         z-index: 0;
         display: flex;
-        height: 500px;
+        height: 31.25rem;
     }
 
     .backgroundOne {
         display: flex;
         justify-content: start;
         width: 46%;
-        left: 20px;
-        height: 300px;
+        left: 1.25rem;
+        height: 18.75rem;
     }
 
     .backgroundTwo {
         width: 36%;
-        top: 40px;
-        left: -200px;
+        top: 2.5rem;
+        left: -12.5rem;
     }
 }
