--- a/src/app/doctors/page.module.css
+++ b/src/app/doctors/page.module.css
@@ -1,30 +1,31 @@
 .doctorsMain {
     display: flex;
     flex-direction: column;
-    padding: 40px 60px;
-    min-height: 542px;
+    padding: 2.5rem 3.75rem;
+    min-height: 33.88rem;
 }
 
 .doctorsTitle {
     color: var(--tertiary-color);
-    font-size: 32px;
+    font-size: 2rem;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
 }
 
 
-@media (min-width: 1000px){
+@media (min-width: 1000px) {
 
-.doctorsTitle {
-    font-size: 48px;
-    margin: 0px  0 30px 100px
-}
+    .doctorsTitle {
+        font-size: 3rem;
+        margin: 0 0 1.88rem 6.25rem;
+    }
 
-.cardsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 90%;
-    gap: 20px;
-    margin-left: 70px;
-}
+    .cardsContainer {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 90%;
+        gap: 1.25rem;
+        margin-left: 4.38rem;
+    }
+
 }
